correction contact bubbles

--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -378,7 +378,7 @@
                   />
                 </div>
                 <a href="../Projects/JS Styling/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -412,7 +412,7 @@
                   />
                 </div>
                 <a href="../Projects/DOM-Travel/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -451,7 +451,7 @@
                   />
                 </div>
                 <a href="../Projects/Click to remove/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -487,7 +487,7 @@
                   />
                 </div>
                 <a href="../Projects/Book List/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -523,7 +523,7 @@
                   />
                 </div>
                 <a href="../Projects/Walking Mario/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -562,7 +562,7 @@
                   />
                 </div>
                 <a href="../Projects/Guess the color/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -598,7 +598,7 @@
                   />
                 </div>
                 <a href="../Projects/Pokemon Project/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -644,9 +644,9 @@
                     alt="Project 8"
                   />
                 </div>
-                <a href="../Projects/Crazy-Cow/index.html" target="_blank"
-                  >View Project</a
-                >
+                <a href="../Projects/Crazy-Cow/index.html" target="_blank">
+                  <button>View Project</button>
+                </a>
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
@@ -688,8 +688,8 @@
                 <a
                   href="../Projects/Uriya-Peled-Pivate-Teacher/index.html"
                   target="_blank"
-                  >View Project</a
-                >
+                  ><button>View Project</button>
+                </a>
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-copy"
@@ -798,7 +798,8 @@
                 <a
                   href="../Projects/Bootstrap Project/Bootstrap Project.html"
                   target="_blank"
-                  >View Project</a
+                >
+                  <button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -831,8 +832,8 @@
                     alt="Project 2"
                   />
                 </div>
-                <a href="../Projects/Grid Project/index.html" target="_blank"
-                  >View Project</a
+                <a href="../Projects/Grid Project/index.html" target="_blank">
+                  <button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -868,7 +869,7 @@
                 <a
                   href="../Projects/Whitney Houston Website/Whitney Houston Project.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -906,7 +907,8 @@
                 <a
                   href="../Projects/Forms small project/index.html"
                   target="_blank"
-                  >View Project</a
+                >
+                  <button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -931,8 +933,8 @@
                     alt="Project 5"
                   />
                 </div>
-                <a href="../Projects/Grid Project 2/index.html" target="_blank"
-                  >View Project</a
+                <a href="../Projects/Grid Project 2/index.html" target="_blank">
+                  <button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -970,7 +972,8 @@
                 <a
                   href="../Projects/Responsive flexbox/index.html"
                   target="_blank"
-                  >View Project</a
+                >
+                  <button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -998,7 +1001,7 @@
                 <a
                   href="../Projects/terms and conditions/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1026,7 +1029,7 @@
                 <a
                   href="../Projects/Responsive Project 2/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1057,7 +1060,7 @@
                   />
                 </div>
                 <a href="../Projects/responsive form/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1085,7 +1088,7 @@
                 <a
                   href="../Projects/Animation small project/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1113,7 +1116,7 @@
                 <a
                   href="../Projects/Animation small projects 2/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1146,7 +1149,7 @@
                 <a
                   href="../Projects/Bootstrap project 2/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1186,7 +1189,7 @@
                   />
                 </div>
                 <a href="../Projects/Build a blog/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1214,7 +1217,7 @@
                 <a
                   href="../Projects/Flexboxes responsive/Index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1239,7 +1242,9 @@
                     alt="Project 15"
                   />
                 </div>
-                <a href="../Projects/Table/" target="_blank">View Project</a>
+                <a href="../Projects/Table/" target="_blank"
+                  ><button>View Project</button></a
+                >
                 <div class="portfolio-item-icons">
                   <i
                     class="fa-regular fa-file"
@@ -1264,7 +1269,7 @@
                   />
                 </div>
                 <a href="../Projects/Zebra Table/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1292,7 +1297,7 @@
                 <a
                   href="../Projects/Flexbox responsive/Index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1320,7 +1325,7 @@
                 <a
                   href="../Projects/Table with pictures/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1351,7 +1356,7 @@
                   />
                 </div>
                 <a href="../Projects//Log in form/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1377,7 +1382,7 @@
                   />
                 </div>
                 <a href="../Projects//Music player/index.html" target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1405,7 +1410,7 @@
                 <a
                   href="../Projects/Responsive coffee website with form/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1438,7 +1443,7 @@
                 <a
                   href="../Projects/Visit card example/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1469,7 +1474,7 @@
                 <a
                   href="../Projects/responsive text and links/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1505,7 +1510,7 @@
                 <a
                   href="../Projects/Sweet spot responsive single page blog/index.html"
                   target="_blank"
-                  >View Project</a
+                  ><button>View Project</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
