--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -392,7 +392,7 @@
                   />
                 </div>
                 <a href="../Projects/JS Styling/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -426,7 +426,7 @@
                   />
                 </div>
                 <a href="../Projects/DOM-Travel/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -465,7 +465,7 @@
                   />
                 </div>
                 <a href="../Projects/Click to remove/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -501,7 +501,7 @@
                   />
                 </div>
                 <a href="../Projects/Book List/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -540,7 +540,7 @@
                   />
                 </div>
                 <a href="../Projects/Walking Mario/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -579,7 +579,7 @@
                   />
                 </div>
                 <a href="../Projects/Guess the color/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -615,7 +615,7 @@
                   />
                 </div>
                 <a href="../Projects/Pokemon Project/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -663,7 +663,7 @@
                   />
                 </div>
                 <a href="../Projects/Crazy-Cow/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -708,7 +708,7 @@
                 <a
                   href="../Projects/Uriya-Peled-Pivate-Teacher/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -821,7 +821,7 @@
                 <a
                   href="../Projects/Bootstrap Project/Bootstrap Project.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -854,7 +854,7 @@
                   />
                 </div>
                 <a href="../Projects/Grid Project/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -891,7 +891,7 @@
                 <a
                   href="../Projects/Whitney Houston Website/Whitney Houston Project.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -929,7 +929,7 @@
                 <a
                   href="../Projects/Forms small project/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -955,7 +955,7 @@
                   />
                 </div>
                 <a href="../Projects/Grid Project 2/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -993,7 +993,7 @@
                 <a
                   href="../Projects/Responsive flexbox/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1021,7 +1021,7 @@
                 <a
                   href="../Projects/terms and conditions/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1049,7 +1049,7 @@
                 <a
                   href="../Projects/Responsive Project 2/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1080,7 +1080,7 @@
                   />
                 </div>
                 <a href="../Projects/responsive form/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1108,7 +1108,7 @@
                 <a
                   href="../Projects/Animation small project/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1136,7 +1136,7 @@
                 <a
                   href="../Projects/Animation small projects 2/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1172,7 +1172,7 @@
                 <a
                   href="../Projects/Bootstrap project 2/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1216,7 +1216,7 @@
                   />
                 </div>
                 <a href="../Projects/Build a blog/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1244,7 +1244,7 @@
                 <a
                   href="../Projects/Flexboxes responsive/Index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1270,7 +1270,7 @@
                   />
                 </div>
                 <a href="../Projects/Table/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1296,7 +1296,7 @@
                   />
                 </div>
                 <a href="../Projects/Zebra Table/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1327,7 +1327,7 @@
                 <a
                   href="../Projects/Flexbox responsive/Index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1355,7 +1355,7 @@
                 <a
                   href="../Projects/Table with pictures/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1386,7 +1386,7 @@
                   />
                 </div>
                 <a href="../Projects//Log in form/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1412,7 +1412,7 @@
                   />
                 </div>
                 <a href="../Projects//Music player/index.html" target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1442,7 +1442,7 @@
                 <a
                   href="../Projects/Responsive coffee website with form/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1478,7 +1478,7 @@
                 <a
                   href="../Projects/Visit card example/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1509,7 +1509,7 @@
                 <a
                   href="../Projects/responsive text and links/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
@@ -1545,7 +1545,7 @@
                 <a
                   href="../Projects/Sweet spot responsive single page blog/index.html"
                   target="_blank"
-                  >Projekt ansehen</a
+                  ><button>Projekt ansehen</button></a
                 >
                 <div class="portfolio-item-icons">
                   <i
