--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -334,26 +334,26 @@
           <div class="social-media-3d-menu">
             <ul>
               <li
-              data-text="Facebook"
-              class="facebook-list-item"
-              style="--i: -3; --clr: #1877f2"
-            >
-              <a
-                href="https://m.me/61563925780935"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Message Kathrin Peled on Facebook Messenger, opens in a new tab"
+                data-text="Facebook"
+                class="facebook-list-item"
+                style="--i: -3; --clr: #1877f2"
               >
-                <span>
-                  <i
-                    class="fa-brands fa-facebook-messenger"
-                    aria-hidden="true"
-                    title="Message on Facebook Messenger"
-                  ></i>
-                </span>
-                Facebook
-              </a>
-            </li>
+                <a
+                  href="https://m.me/61563925780935"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Message Kathrin Peled on Facebook Messenger, opens in a new tab"
+                >
+                  <span>
+                    <i
+                      class="fa-brands fa-facebook-messenger"
+                      aria-hidden="true"
+                      title="Message on Facebook Messenger"
+                    ></i>
+                  </span>
+                  Facebook
+                </a>
+              </li>
               <li
                 data-text="Telegram"
                 class="telegram-list-item"
@@ -890,7 +890,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
+        <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
           <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
