--- a/index-german.html
+++ b/index-german.html
@@ -833,22 +833,11 @@
       </div>
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
-      <div class="container">
-        <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
-        <div class="logo">
-          <a
-            href="./Pages/sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
-            ><img
-              src="./Icons/Draculady-logo.webp"
-              loading="lazy"
-              alt="Draculady code logo"
-          /></a>
-        </div>
-      </div>
-    </footer>
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="./ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
+
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js" async></script>
