--- a/index.html
+++ b/index.html
@@ -701,6 +701,7 @@
           <i class="fa-solid fa-up-long" aria-hidden="true"></i>
         </a>
       </div>
+
       <div class="languages">
         <a href="./index-german.html" aria-label="Change Language to German">
           <img
@@ -811,22 +812,11 @@
       </div>
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
-      <div class="container">
-        <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
-        <div class="logo">
-          <a
-            href="./Pages/sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
-            ><img
-              src="./Icons/Draculady-logo.webp"
-              loading="lazy"
-              alt="Draculady code logo"
-          /></a>
-        </div>
-      </div>
-    </footer>
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="./ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
+
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js" async></script>
