splitting to components-backtotop

--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -774,11 +774,8 @@
           </div>
         </div>
       </section>
-      <div class="backtotop">
-        <a href="#" aria-label="Zurück nach oben">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="languages">
         <a
           href="./contact-english.html"
