--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -932,6 +932,8 @@
           />
         </a>
       </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="custom-cursor"></div>
       <div
         class="share-social-media"
