--- a/index-german.html
+++ b/index-german.html
@@ -718,11 +718,8 @@
           </div>
         </a>
       </div>
-      <div class="backtotop">
-        <a href="#" aria-label="Zurück nach oben">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="./ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="languages">
         <a href="./index.html" aria-label="Change Language to English">
           <img
