--- a/index.html
+++ b/index.html
@@ -696,12 +696,7 @@
           </div>
         </a>
       </div>
-      <div class="backtotop">
-        <a href="#" aria-label="Back to top">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
-
+      <script src="./ScriptsComponents/backToTopLoader.js"></script>
       <div class="languages">
         <a href="./index-german.html" aria-label="Change Language to German">
           <img
