--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -773,11 +773,8 @@
           </div>
         </div>
       </section>
-      <div class="backtotop">
-        <a href="#" aria-label="Back to top">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="languages">
         <a href="./contact-german.html" aria-label="Change Language to German">
           <img
