--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -366,11 +366,8 @@
           />
         </a>
       </div>
-      <div class="backtotop">
-        <a href="#" aria-label="Zurück nach oben">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="hire-me">
         <a href="./contact-german.html#contact" aria-label="Hire me">
           <div class="face">
