--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1619,11 +1619,8 @@
           </div>
         </div>
       </section>
-      <div class="backtotop">
-        <a href="#" aria-label="Back to top">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="hire-me">
         <a href="./contact-english.html#contact" aria-label="Hire me">
           <div class="face">
