--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1663,11 +1663,8 @@
           </div>
         </a>
       </div>
-      <div class="backtotop">
-        <a href="#" aria-label="Zurück nach oben">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="languages">
         <a
           href="./portfolio-english.html"
