--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -853,11 +853,8 @@
           />
         </a>
       </div>
-      <div class="backtotop">
-        <a href="#" aria-label="Zurück nach oben">
-          <i class="fa-solid fa-up-long" aria-hidden="true"></i>
-        </a>
-      </div>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
+
       <div class="custom-cursor"></div>
       <div
         class="share-social-media"
