--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -792,7 +792,7 @@
     
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
@@ -804,7 +804,11 @@
           /></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
+        <!--* Footer -->
+        <div id="footer"></div>
+        <script src="../ScriptsComponents/footerLoader.js" async></script>
+        <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
