--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -436,10 +436,10 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
-      
+
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
         <div class="logo">
@@ -451,8 +451,11 @@
           /></a>
         </div>
       </div>
-    </footer>
-
+    </footer> -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
