--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -933,7 +933,7 @@
       
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
         <div class="logo">
@@ -945,7 +945,11 @@
           /></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
+        <!--* Footer -->
+        <div id="footer"></div>
+        <script src="../ScriptsComponents/footerLoader.js" async></script>
+        <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
