--- a/PagesComponents/footer-de.html
+++ b/PagesComponents/footer-de.html
@@ -1,11 +1,10 @@
-<footer>
-    <div class="container">
-      <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
-      <div class="logo">
-        <a href="{basePath}Pages/sitemap.html" target="_blank" aria-label="Website's Map">
-          <img src="{basePath}Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
-        </a>
-      </div>
+<footer id="footer">
+  <div class="container">
+    <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
+    <div class="logo">
+      <a id="sitemap-link" target="_blank" aria-label="Website's Map">
+        <img src="{basePath}Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+      </a>
     </div>
-  </footer>
-  
+  </div>
+</footer>
