--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -938,7 +938,7 @@
      
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
@@ -950,7 +950,11 @@
           /></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
+        <!--* Footer -->
+        <div id="footer"></div>
+        <script src="../ScriptsComponents/footerLoader.js" async></script>
+        <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
