--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -837,7 +837,7 @@
      
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My Portfolio</p>
         <div class="logo">
@@ -849,7 +849,11 @@
           /></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
+        <!--* Footer -->
+        <div id="footer"></div>
+        <script src="../ScriptsComponents/footerLoader.js" async></script>
+        <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
