--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -856,10 +856,10 @@
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
 
       <div class="custom-cursor"></div>
-     
+
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein Portfolio</p>
         <div class="logo">
@@ -871,7 +871,11 @@
           /></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
