--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -342,73 +342,6 @@
               </a>
             </div>
           </div>
-          <!-- <div class="files">
-              <a
-                href="../Files/Diplom Übersetzung 2023.pdf"
-                download
-                aria-label="Download my diploma in German"
-              >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-user-graduate" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Translated to German">
-                      My
-                      <strong>Diplom</strong> 🇩🇪
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <a
-                href="../Files/Kathrin Peled Resume 10.2024.pdf"
-                aria-label="Download my extended resume in English"
-                download
-              >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-file" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Extended version of my CV">
-                      My <strong>Full Resume</strong> 🇬🇧
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <a
-                href="../Files/Kathrin Peled Professional Resume.pdf"
-                aria-label="Download my professional resume in English"
-                download
-              >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-user-tie" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Resume with relevant experience only">
-                      <strong>Professional Resume</strong> 🇬🇧
-                    </span>
-                  </div>
-                </div>
-              </a>
-              <a
-                href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
-                download
-                aria-label="Download my professional Resume in German"
-              >
-                <div class="file-item">
-                  <div class="file-icon">
-                    <i class="fa-solid fa-user-tie" aria-hidden="true"></i>
-                  </div>
-                  <div class="file-list">
-                    <span title="Lebenslauf mit nur relevanter Erfahrung">
-                      <strong>Professional Resume</strong> 🇩🇪
-                    </span>
-                  </div>
-                </div>
-              </a>
-            </div> -->
         </div>
       </section>
       <div class="languages">
@@ -422,21 +355,11 @@
       </div>
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
 
-      <div class="hire-me">
-        <a href="./contact-english.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Hire me</p>
-          </div>
-        </a>
-      </div>
       <div class="custom-cursor"></div>
-
+      <!-- * hire me -->
+      <div id="smiley"></div>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
+      <!-- * hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <!--* Footer -->
