--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1620,20 +1620,10 @@
         </div>
       </section>
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
-
-      <div class="hire-me">
-        <a href="./contact-english.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Hire me</p>
-          </div>
-        </a>
-      </div>
+      <!-- * hire me -->
+      <div id="smiley"></div>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
+      <!-- * hire me -->
       <div class="languages">
         <a
           href="./portfolio-german.html"
@@ -1647,14 +1637,14 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
-     
+
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
 
-        <!--* Footer -->
-        <div id="footer"></div>
-        <script src="../ScriptsComponents/footerLoader.js" async></script>
-        <!--* Footer -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/toggle-english.js" async></script>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
