--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1650,21 +1650,11 @@
           </div>
         </div>
       </section>
-      <div class="hire-me">
-        <a href="./contact-german.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Stellt mich ein</p>
-          </div>
-        </a>
-      </div>
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
-
+      <!-- * hire me -->
+      <div id="smiley"></div>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
+      <!-- * hire me -->
       <div class="languages">
         <a
           href="./portfolio-english.html"
@@ -1678,14 +1668,14 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
-      
+
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
 
-        <!--* Footer -->
-        <div id="footer"></div>
-        <script src="../ScriptsComponents/footerLoader.js" async></script>
-        <!--* Footer -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/toggle-german.js" async></script>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
