--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -930,7 +930,10 @@
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
 
       <div class="custom-cursor"></div>
-      
+            <!-- * hire me -->
+            <div id="smiley"></div>
+            <script src="../ScriptsComponents/smileyLoader.js"></script>
+            <!-- * hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
 
