--- a/index-german.html
+++ b/index-german.html
@@ -138,11 +138,11 @@
 
     <!-- Preload custom stylesheet for the page -->
     <link rel="preload" href="./Styles/style.css" as="style" />
-    <link rel="preload" href="./Styles/sharingToggle.css" as="style" />
+    <!-- <link rel="preload" href="./Styles/sharingToggle.css" as="style" /> -->
 
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
-    <link rel="stylesheet" href="./Styles/sharingToggle.css" />
+    <!-- <link rel="stylesheet" href="./Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics tag -->
     <script
@@ -704,20 +704,10 @@
           </div>
         </div>
       </section>
-
-      <div class="hire-me">
-        <a href="./Pages/contact-german.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Stellt mich ein</p>
-          </div>
-        </a>
-      </div>
+            <!-- * hire me -->
+            <div id="smiley"></div>
+            <script src="./ScriptsComponents/smileyLoader.js"></script>
+            <!-- * hire me -->
       <script src="./ScriptsComponents/backToTopLoader.js"></script>
 
       <div class="languages">
@@ -740,7 +730,7 @@
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js" async></script>
-    <script src="./Scripts/sharing-toggle.js" async></script>
+    <!-- <script src="./Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
     <script
