--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -368,21 +368,11 @@
       </div>
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
 
-      <div class="hire-me">
-        <a href="./contact-german.html#contact" aria-label="Hire me">
-          <div class="face">
-            <div class="eyes">
-              <div class="eye"></div>
-              <div class="eye"></div>
-            </div>
-          </div>
-          <div class="hire-me-textbox">
-            <p>Stellt mich ein</p>
-          </div>
-        </a>
-      </div>
       <div class="custom-cursor"></div>
-
+      <!-- * hire me -->
+      <div id="smiley"></div>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
+      <!-- * hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
 
